adding some element in database and controller
