# routes/api.php
@@ -7,9 +7,11 @@ use App\Http\Controllers\UserController;
 use App\Http\Controllers\Auth\RegisteredUserController;
 use App\Http\Controllers\Auth\AuthenticatedSessionController;
 use App\Http\Controllers\Api\Auth\UserController as AuthUserController;
+use App\Http\Controllers\ImagesController;
 use App\Http\Controllers\PermissionsController;
 use App\Http\Controllers\UserGroupController;
 use App\Models\Images;
+use App\Models\userGroupPermission;
 
 /*
 |--------------------------------------------------------------------------
@@ -22,6 +24,9 @@ use App\Models\Images;
 |
 */
 // Authentification de l'utilisateur
+
+
+
 Route::post('/register', [RegisteredUserController::class, 'store'])->name('register    ');
 Route::post('/login', [AuthenticatedSessionController::class, 'store'])->name('login');
 Route::post('/logout', [AuthenticatedSessionController::class, 'destroy']);
@@ -51,13 +56,18 @@ Route::controller(PermissionsController::class)->prefix('permission')->group(fun
     Route::put('update/{id}','update');
     Route::put('delete/{id}','delete');
 });
-Route::controller(Images::class)->prefix('image')->group(function(){
-    Route::post('/upload');
-    Route::post('/uploadMany');
-    Route::delete('/delete');
-    Route::delete('/deleteMany');
+Route::controller(ImagesController::class)->prefix('image')->group(function(){
+    Route::post('/upload','store_1');
+    Route::post('/uploadMany','storeMany');
+    Route::delete('/delete','deleteMany');
+    Route::delete('/deleteMany','delete_1');
 });
-Route::controller(AccessController::class)->prefix('access')->group(function(){
+
+Route::controller(userGroupPermission::class)->middleware(['auth:sanctum'])->prefix('user-group-permission')->group(function(){
+    Route::post('save','store');
+    Route::put('update/{id}','update');
+});
+Route::controller(AccessController::class)->middleware(['auth:sanctum'])->prefix('access')->group(function(){
     Route::post('save','store');
     Route::get('/{id}','show');
     Route::get('/','index');
