# storage/api-docs/api-docs.json
@@ -968,6 +968,91 @@
                     }
                 }
             }
+        },
+        "/user-group-permission/save": {
+            "post": {
+                "tags": [
+                    "Operation between userGroup and Permission"
+                ],
+                "summary": "associate one access to some group (remove to another)",
+                "description": "Returns permission data",
+                "operationId": "b920e1e80fc45824b86b3152bdf042e1",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "group_id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "permission_id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true
+                },
+                "responses": {
+                    "201": {
+                        "description": "Successful operation"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
+        "/user-group-permission/update/{id}": {
+            "put": {
+                "tags": [
+                    "Operation between userGroup and Permission"
+                ],
+                "summary": "Update existing permission with group",
+                "description": "Returns updated permission data",
+                "operationId": "074d62c08709856afdea543c6780ac03",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "202": {
+                        "description": "Successful operation"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "404": {
+                        "description": "Resource Not Found"
+                    }
+                }
+            }
         }
     },
     "tags": [
